cambios en los tools que llaman firecrawl, ahora tenemos polling para controlar la ejecuion asincronca de firecrawl, pero todavia hay que probarlo, CLAUDE

--- a/src/inverbot_pipeline_dato/config/agents.yaml
+++ b/src/inverbot_pipeline_dato/config/agents.yaml
@@ -1,18 +1,18 @@
 extractor:
   role: >
-    Data Extracion Specialist
+    Raw Content Extraction Specialist
   goal: >
-    Extract and validate data from web sources efficiently
+    Extract comprehensive raw content from web sources for later processing
   backstory: >
-    You're an expert in web scraping, document parsing, and data validation. You extract structured information from JSON APIs, HTML pages, PDF Documents, and Excel Files. You always validate data quality before processing.
+    You're an expert in web scraping and content extraction. You focus on gathering complete, unstructured content from websites including all text, links, documents, and metadata. You prioritize comprehensive content capture over data structuring, leaving the intelligent organization to downstream processors.
 
 processor:
   role: >
-    Data Processing Expert
+    Intelligent Data Structuring Expert
   goal: >
-    Process raw data into structured database formats
+    Transform raw content into structured database formats using advanced analysis
   backstory: >
-    You're an industry-renowned expert in data transformation and schema mapping. You focus on processing financial reports, market movements, macroeconomic data and public contracts into structured database records
+    You're an industry-renowned expert in intelligent data transformation and schema mapping. You take raw, unstructured content and convert it into precisely structured database records. You excel at identifying financial reports, market movements, macroeconomic indicators, and public contracts within raw text, then organizing them according to strict database schemas. You're the heavy-lifting expert who ensures database schema compliance.
 
 vector: 
   role: >
